Closed
Bug 392970
Opened 18 years ago
Closed 18 years ago
Split NSString+Utils into two pieces
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.6
People
(Reporter: Jeff.Dlouhy, Assigned: stuart.morgan+bugzilla)
Details
(Keywords: fixed1.8.1.8)
Attachments
(2 files, 1 obsolete file)
|
66.49 KB,
patch
|
Details | Diff | Splinter Review | |
|
65.47 KB,
patch
|
Details | Diff | Splinter Review |
The inclusion of NSString+Utils.h into a file requires that file to be a '.mm' due to Gecko headers. The proposed plan is to split NSString+Utils into two files, one with the Gecko bits that require ObjC++, and one that doesn't.
| Assignee | ||
Comment 1•18 years ago
|
||
Other than splitting it there are just a few small formatting fixes and the removal of one method no-one was using.
Since I was auditing NSString+Util importing anyway, I removed it entirely from a bunch of files that weren't actually using it. I also had to add a missing core header to RemoteDataProvider, which has only ever compiled before by accident.
The remove of NSString+Utils.mm isn't in the patch; I'll do that on checkin.
Attachment #278247 -
Flags: superreview?(mark)
Comment 2•18 years ago
|
||
Comment on attachment 278247 [details] [diff] [review]
split
+- (void)assignTo_nsAString:(nsAString&)ioString
+ if (len + 1 > ASSIGN_STACK_BUFFER_CHARACTERS) {
+ buffer = (PRUnichar *)malloc(sizeof(PRUnichar) * (len + 1));
[...]
+ [self getCharacters:buffer]; // does not null terminate
Then what's this +1 business about?
++ (id)stringWithPRUnichars:(const PRUnichar*)inString
+- (id)initWithPRUnichars:(const PRUnichar*)inString
One of these methods checks inString for nullness, and the other doesn't. Be consistent. (I don't mind eliminating the check, or making it an assertion.)
Attachment #278247 -
Flags: superreview?(mark) → superreview+
| Assignee | ||
Comment 3•18 years ago
|
||
Trunk version as checked in. I didn't make any of the functional changes, since they would be hidden from history by the split. We can clean up NSString+Gecko in another patch if we want to.
Attachment #278247 -
Attachment is obsolete: true
| Assignee | ||
Comment 4•18 years ago
|
||
As checked in on MOZILLA_1_8_BRANCH.
| Assignee | ||
Updated•18 years ago
|
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.7
Resolution: --- → FIXED
Target Milestone: --- → Camino1.6
You need to log in
before you can comment on or make changes to this bug.
Description
•