Camino only - Bug 392970: Split NSString+Utils.mm into NSString+Gecko.mm and NSString+Utils.m to allow general util use in .m files. r/sr=mento